fixing h4 and better spacing for CodeBlock

--- a/src/markdown/CodeBlock/CodeBlock.module.css
+++ b/src/markdown/CodeBlock/CodeBlock.module.css
@@ -7,7 +7,7 @@
   --line-number-size: 40px;
   --line-padding: 20px;
 
-  margin-block-end: 30px;
+  margin-block-end: var(--space-s);
   line-height: 22px;
   overflow: hidden;
 }
